2008-01-23  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-sound.c: Fix a warning by moving
	the prototype for _gnome_sound_set_enabled() a bit.
	Patch from dmacks at netspace org. Closes bug #511455.

2008-01-23  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-config.c (check_path): Use g_stat().

	* libgnome/gnome-init.c (libgnome_userdir_setup): Use
	G_IS_DIR_SEPARATOR(). Use g_stat().

2008-01-22  Tor Lillqvist  <tml@novell.com>

	* libgnome-zip.in: Look for catalogs in share/locale first, as
	that is where they will be with a properly built GNU gettext.

2008-01-17  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-config.c: (dump_keys), (dump_sections),
	(dump_sections_to_file), (dump_profile): Make this more
	robust against full disk situations. Patch from edpeur at gmail com
	Closes bug #507687.
	* libgnome/libgnome-2.0.pc.in: Add localstatedir variable so
	we can tell where gnome-games should look for highscore files.
	Closes some bug I can't find :-/

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_finalize):
	Free list of accessibility modules. Closes bug #483770.

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_accessibility_keyboard.schemas.in:
	* schemas/desktop_gnome_accessibility_startup.schemas.in:
	* schemas/desktop_gnome_applications_at_mobility.schemas.in:
	* schemas/desktop_gnome_applications_at_visual.schemas.in:
	* schemas/desktop_gnome_applications_browser.schemas.in:
	* schemas/desktop_gnome_applications_terminal.schemas.in:
	* schemas/desktop_gnome_background.schemas.in.in:
	* schemas/desktop_gnome_file_views.schemas.in:
	* schemas/desktop_gnome_interface.schemas.in.in:
	* schemas/desktop_gnome_peripherals_keyboard.schemas.in:
	* schemas/desktop_gnome_peripherals_mouse.schemas.in:
	Add missing «.» to all long descriptions.
	Closes bug #100287. Reported by Christian Rose.
	
2007-12-18  Christian Persch  <chpe@gnome.org>
